Closed Bug 1065924 Opened 10 years ago Closed 9 years ago

Assertion failure: !ticksPlayedForThisStream || ticksPlayedForThisStream == ticksPlayed (Each stream should have the same number of frame.), at ../../../gecko/content/media/MediaStreamGraph.cpp:1345

Categories

(Core :: Audio/Video, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla37
Tracking Status
firefox34 --- ?
firefox35 --- fixed
firefox36 --- fixed
firefox37 --- fixed
firefox-esr31 --- unaffected
b2g-v2.1 --- fixed
b2g-v2.2 --- fixed

People

(Reporter: jwwang, Assigned: padenot)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

This failure happened on test_mediatrack_events.html.

DeviceRunner TEST-UNEXPECTED-FAIL | /tests/content/media/test/test_mediatrack_events.html | application timed out after 450.0 seconds with no output
Keywords: assertion
Assignee: nobody → padenot
This is pretty widespread. Any chance we can get some eyes on this?
Paul -- Do you have time to look at this this week?
Flags: needinfo?(mreavy) → needinfo?(padenot)
Yes. I did a try push right before leaving two weeks ago, but I'll pick that up now.
Flags: needinfo?(padenot)
I ran into an issue with my try push, this one should work:
https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=e9fd8822f0c7
I hit this one just now when I attempted to close the Loop chat window with the [x] button on a received call from a contact. Logs available on request.
Hey Paul -- This has gotten painfully frequent. Do you know what's happening here?  Or when you may have a fix?
Flags: needinfo?(padenot)
Found the cause, wrote a fix, currently running through try at: https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=f3ad7fb70f2a.
Flags: needinfo?(padenot)
There was a mismatch between the AppendSlice and AppendSilence calls and the
updating of the variable. The good thing is that the failure was benign: the
code is actually behaving correctly, only the last update of the variable (in
the loop) caused the assertion, which means we probably don't need to uplift
this.
Attachment #8533689 - Flags: review?(rjesup)
Attachment #8533689 - Flags: review?(rjesup) → review+
Comment on attachment 8533689 [details] [diff] [review]
Make sure we correctly update the variables tracking the number of samples written. r=

This is a benign assert fix, RyanVM asked for it to be uplifted so that the pain for the sheriff is reduced.
Attachment #8533689 - Flags: approval-mozilla-release?
Attachment #8533689 - Flags: approval-mozilla-beta?
Attachment #8533689 - Flags: approval-mozilla-aurora?
Attachment #8533689 - Flags: approval-mozilla-release? → approval-mozilla-b2g34?
https://hg.mozilla.org/mozilla-central/rev/614df3d0f549
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla37
Attachment #8533689 - Flags: approval-mozilla-b2g34? → approval-mozilla-b2g34+
Attachment #8533689 - Flags: approval-mozilla-beta?
Attachment #8533689 - Flags: approval-mozilla-beta+
Attachment #8533689 - Flags: approval-mozilla-aurora?
Attachment #8533689 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.